внесены стилевые изменения

--- a/src/account.html
+++ b/src/account.html
@@ -49,11 +49,14 @@
                     sfd
               </div>
 
-              <h2 class="accaunt_name"></h2>
+              <h2 class="accaunt_name"> </h2>
 
-              <div class="location"><p><img src="#" alt=""> <span id="location">0</span></p></div>
+              <div class="location"><p><img src="#" alt=""> <span id="location"> 0 </span></p></div>
 
               <div class="accaunt__statist">
+                <p><span id="city">0</span> городов </p>
+                <p><span id="country">0</span> стран </p>
+
                 <p>Количество заметок: <span id="notes">0</span></p>
                 <p>Подписчики: <span id="followers">0</span></p>
                 <p>Подписки: <span id="following">0</span></p>
@@ -72,7 +75,10 @@
               <div class="line"></div>
 
 
-              <div class="accaunt__trips"></div>
+              <div class="accaunt__trips">
+
+                
+              </div>
 
               <h2 class="title">Заметки</h2>
 
