--- a/src/index.html
+++ b/src/index.html
@@ -33,24 +33,24 @@
                         </div>
                         <input class="index__win" type="text" name="username" placeholder=" Логин">
 
-                        <div class="title_fs18regular">
+                        <div class="title__fs18regular">
                             Password
                         </div>
                         <input class="index__win" type="password" name="password" placeholder=" Пароль">
 
 
                         <div class="index__btn">
-                            <a href="home.html" class="button button_main title__fs20bold">Вход</a>
-                            <a href="home.html" class="button button_main title__fs20bold">Регистрация</a>
+                            <a href="home.html" class="button button__main title__fs20bold">Вход</a>
+                            <a href="home.html" class="button button__main title__fs20bold">Регистрация</a>
                         </div>
 
                         <!-- <button class="button button_main"> </div></button> 
                         <button class="button button_main">Регистрация</button> -->
 
                         <div class="index__socialbtn">
-                            <a href="#" class=" social_btn title title__fs14"><img src="../src/icons/links/Apple.svg" alt=""> Вход через Apple</a>
-                            <a href="#" class=" social_btn title title__fs14"><img src="../src/icons/links/Google.svg" alt=""> Вход через Google</a>
-                            <a href="#" class=" social_btn  title title__fs14"> <img class="" src="../src/icons/links/Yandex.svg" alt=""> Вход через Yandex</a>
+                            <a href="#" class=" social__btn title title__fs14"><img class="socialbtn__img" src="../src/icons/links/Apple.svg" alt=""> Вход через Apple</a>
+                            <a href="#" class=" social__btn title title__fs14"><img class="socialbtn__img" src="../src/icons/links/Google.svg" alt=""> Вход через Google</a>
+                            <a href="#" class=" social__btn  title title__fs14"> <img class="socialbtn__img" src="../src/icons/links/Yandex.svg" alt=""> Вход через Yandex</a>
 
                             <!-- <button class="social_btn  title title_fs14"> <img src="../src/icons/links/Google.svg" alt=""> Вход через Google</button>
                             <button class="social_btn  title title_fs14"> <img src="../src/icons/links/Apple.svg" alt=""> Вход через Facebook</button>
