--- a/src/account.html
+++ b/src/account.html
@@ -65,8 +65,8 @@
 
               <div class="accaunt__buttons">
 
-                <button class="button button_mini ">Создать заметку</button> 
-                <button class="button button_mini ">моя карта</button>
+                <button class="button button__mini ">Создать заметку</button> 
+                <button class="button button__mini ">моя карта</button>
 
               </div>
 
