выполнена  верстка модальных окон, добавлен скрипт

--- a/src/account.html
+++ b/src/account.html
@@ -50,16 +50,16 @@
 
               <div class="location"><p><img src="#" alt=""> <span id="location"> Tokio </span></p></div>
 
-              <div class="accaunt__statistVisit">
+              <div class="accaunt__statistVisit title__fs18exbold">
                 <p><span id="city">0</span> городов </p>
                 <p><span id="country">0</span> стран </p>
 
               </div>
 
-              <div class="accaunt__statist ">
-                <p>Количество заметок: <span id="notes">0</span></p>
-                <p>Подписчики: <span id="followers">0</span></p>
-                <p>Подписки: <span id="following">0</span></p>
+              <div class="accaunt__statist  title__fs18medium">
+                <p> <span id="notes">0</span> Заметок</p>
+                <p> <span id="followers">0</span> Подписчиков</p>
+                <p> <span id="following">0</span> Подписок</p>
               </div>
 
 
@@ -80,7 +80,7 @@
                 
               </div>
 
-              <h2 class="title">Заметки</h2>
+              <h2 class="title title__fs18exbold">Заметки</h2>
 
 
             </div>
