--- a/src/explore.html
+++ b/src/explore.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JorneyJornay</title>
     <meta name="title" content="JorneyJornay">
-    <meta name="description" content="Здесь вы сможете ознакомиться с моими работами и узнать больше обо мне">
+   
 
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -39,6 +39,25 @@
       <li><a href="index.html"><img src="../src/icons/Menu/loginMenu.svg" alt="Icon 7">выход</a></li>
     </ul>
   </div>
+
+
+  <section class="reference">
+
+
+                <div class="exsplore__map"> </div>
+
+
+
+                <div class="explore__recommendations" > </div>
+
+
+
+
+
+  </section>
+
+
+
 
     <script src="js/script.js"></script>
 </body>
