--- a/src/setting.html
+++ b/src/setting.html
@@ -26,14 +26,14 @@
       </form>
 </header>
     
-<div class="sidebar_menu">
+<div class="sidebar__menu">
   <ul>
     <li><a href="home.html"><img class="menu_icon" src="../src/icons/Menu/homeMenu.svg" alt="Icon 1">home</a></li>
     <li><a href="account.html"><img class="menu_icon" src="../src/icons/Menu/profileMenu.svg" alt="Icon 2">аккаунт</a></li>
     <li><a href="explore.html"><img class="menu_icon" src="../src/icons/Menu/discoveryMenu.svg" alt="Icon 3">путешествия</a></li>
     <li><a href="trips.html"><img class="menu_icon" src="../src/icons/Menu/ticketMenu.svg" alt="Icon 4">поездки</a></li>
     <li><a href="#"><img class="menu_icon" src="../src/icons/Menu/messMenu.svg" alt="Icon 5">мессенджер</a></li>
-    <li><a href="#"><img class="menu_icon" src="../src/icons/Menu/plusMenu.svg" alt="Icon 6">создать</a></li>
+    <li><a href="#"><img  class="menu_icon" src="../src/icons/Menu/plusMenu.svg" alt="Icon 6">создать</a></li>
     <li><a href="setting.html"><img  class="menu_icon" src="../src/icons/Menu/settingMenu.svg" alt="Icon 7">настройки</a></li>
     <li><a href="index.html"><img src="../src/icons/Menu/loginMenu.svg" alt="Icon 7">выход</a></li>
   </ul>
