add modal index

--- a/src/account.html
+++ b/src/account.html
@@ -33,7 +33,7 @@
         </ul>
       </div>
 
-      <div id="myModal1" class="modal">
+      <!-- <div id="myModal1" class="modal">
         <div class="modal__contents">
           <span class="close" onclick="closeModal('myModal1')">&times;</span>
           
@@ -46,8 +46,7 @@
 
           <button id="createNote" class="button button__main  button__center">Создать заметку</button>
         </div>
-      </div>
- 
+      </div> -->
 
       <div id="myModal2" class="modalMap">
         <div class="modalMap__contents">
